<resources>
    <string name="app_name">Swapi</string>
    <string name="base_url">https://swapi.co/api/</string>
    <string name="label_search_resource">Search Resource</string>
    <string name="label_accessibility_search_resource">Search Resource</string>
    <string name="message_enter_resource_name">Please enter resource name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="some_error">Getting unknown error</string>
    <string name="label_eye_color">Eye Color:</string>
    <string name="label_hair_color">Hair Color:</string>
    <string name="label_skin_color">Skin Color:</string>
    <string name="label_mass">Mass:</string>
    <string name="label_height">Height:</string>
    <string name="label_gender">Gender:</string>
    <string name="label_detail">Details</string>

    <string name="message_no_data_available">No data available</string>
    <string name="error_network_check">Please check your network connection</string>
    <string name="error_went_wrong">Something went wrong. Please try again.</string>
    <string name="error_unknown">Something went wrong while connecting to the server.  Please try again later.</string>
    <string name="error_server_unable_to_process_request">Server is unable to process request. Please try again later.</string>
    <string name="error_connection_timeout">Connection timeout. Please try again later.</string>
    <string name="error_request_timeout">Request timeout. Please try again later.</string>
    <string name="error_io">Unable to get response from server. Please try again later.</string>
    <string name="error_remote_exception">Error communicating with remote host. Please try again later.</string>
    <string name="error_404">Requested data is not available.</string>
</resources>
