<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey">

    <ProgressBar
        android:id="@+id/fragment_detail_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/fragment_detail_rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightGrey"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_detail_cv_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_detail_tv_name"
                    style="@style/TextAppearance.AppCompat.Display2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/fragment_detail_tv_birth_year"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_detail_cv_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:padding="5dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/fragment_detail_tv_detail_label"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/label_detail"
                    android:textColor="@android:color/black" />

                <RelativeLayout
                    android:id="@+id/fragment_detail_rl_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/fragment_detail_tv_gender_label"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/label_gender"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/fragment_detail_tv_gender"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:gravity="end"
                        android:textColor="@color/colorGrey" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/fragment_detail_rl_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/fragment_detail_tv_height_label"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/label_height"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/fragment_detail_tv_height"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:textColor="@color/colorGrey" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/fragment_detail_rl_mass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/fragment_detail_tv_mass_label"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/label_mass"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/fragment_detail_tv_mass"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:textColor="@color/colorGrey" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/fragment_detail_rl_hair_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/fragment_detail_tv_hair_color_label"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/label_hair_color"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/fragment_detail_tv_hair_color"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:textColor="@color/colorGrey" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/fragment_detail_ll_skin_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/fragment_detail_tv_skin_color_label"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/label_skin_color"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/fragment_detail_tv_skin_color"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:textColor="@color/colorGrey" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/fragment_detail_rl_eye_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/fragment_detail_tv_eye_color_label"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/label_eye_color"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/fragment_detail_tv_eye_color"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:textColor="@color/colorGrey" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>